--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
         <button type="submit">Search</button>
     </form>
-    <script src="index.js" type="module"></script>
+    <div class="gallery">
+        <!-- Карточки изображений -->
+    </div>
+    <button type="button" class="load-more is-hidden">Load more</button>
 </body>
 
 </html>
