--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>GALLERY</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
 </head>
@@ -18,7 +18,7 @@
     <div class="gallery">
         <!-- Карточки изображений -->
     </div>
-    <button type="button" class="load-more is-hidden">Load more</button>
+    <!-- <button type="button" class="load-more is-hidden">Load more</button> -->
 </body>
 
 </html>
