--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script type="module" src="./index.js"></script>
 </head>
 
-<body>
+<body class="overflow">
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <form class="search-form" id="search-form">
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
