my-js-hw-11-beta

--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,19 @@
     <script type="module" src="./index.js"></script>
 </head>
 
-<body class="overflow">
+<!-- <body class="overflow"> -->
+
+<body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <form class="search-form" id="search-form">
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
         <button type="submit">Search</button>
     </form>
-    <div class="gallery">
-        <!-- Карточки изображений -->
+    <div class="gallery-wrap">
+        <div class="gallery-x gallery gallery-1" id="point">
+            <!-- Карточки изображений -->
+        </div>
     </div>
-    <!-- <button type="button" class="load-more is-hidden">Load more</button> -->
 </body>
 
 </html>
