--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 <!-- <body class="overflow"> -->
 
-<body>
+<body class="padding-right">
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <form class="search-form" id="search-form">
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
