--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
             <!-- Карточки изображений -->
         </div>
     </div>
+    <p class="end-gallery is-hidden">"There is nothing more."</p>
 </body>
 
 </html>
